# bitty

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  bitty.sln  bitty.vcxproj  bitty.vcxproj.filters  versions.md
bitty/: .gitignore
bitty.linux/: .gitignore  CMakeLists.txt
bitty.xcodeproj/: project.pbxproj
bitty.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
bitty.xcodeproj/xcshareddata/xcschemes/: bitty.xcscheme
docs/: CHANGELOG.md  about.html  article.css  article.js  changelog.html  documents.html  formats.html  formats.md  index.html  keycodes.html  keycodes.md  manual.html  operations.html  physics.html  polyfill.js  prism-lua.js  prism.css  prism.js  slides.css  slides.html  style.css
docs/documents/: index.html  manual.html  manual.md  operations.html  operations.md  others.md  physics.md
examples/: 2048.bit  Boing.bit  Coroutine.bit  Debug.bit  Dynamic Asset.bit  Get More.bit  Hello World.bit  Multiple Files.bit  OOP.bit  Palette.bit  Platformer.bit  Quitting.bit  Racing.bit  Render Target.bit  Reversi.bit  Sweeper.bit  Updating.bit
lib/b64/: CMakeLists.txt
lib/chipmunk2d/src/: ._cpHastySpace.c  ._cpMarch.c  ._cpPolyline.c
lib/civetweb/src/: civetweb.c
lib/curl/: .gitignore  MacOSX-Framework  copy_linux.sh
lib/dirent/include/: dirent.h
lib/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_internal.h  imgui_widgets.cpp
lib/imgui_code_editor/: imgui_code_editor.cpp  imgui_code_editor.h
lib/imgui_sdl/: .gitignore  README.md  example.cpp  imgui_sdl.cpp  imgui_sdl.h
lib/jo_gif/: jo_gif.cpp  jo_gif.h
lib/jpath/: LICENSE  README.md  jpath.hpp  test.cpp
lib/libuv/: .gitignore  copy_linux.sh
lib/libuv/include/: uv.h
lib/libuv/src/unix/: internal.h
lib/libuv/src/win/: util.c
lib/mongoose/: mongoose.c
lib/network_info/: .appveyor.yml  .dockerignore  .gitignore  .travis.yml  Dockerfile  cabal.project  network-info.cabal
lib/network_info/cbits/: network-windows.c
lib/portable_file_dialogs/: portable-file-dialogs.cpp  portable-file-dialogs.h
lib/portable_file_dialogs_polyfill/: portable-file-dialogs.h
lib/sdl_gfx/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  SDL2_framerate.c  SDL2_framerate.h  SDL2_gfx.pc.in  SDL2_gfxPrimitives.c  SDL2_gfxPrimitives.h  SDL2_gfxPrimitives_font.h  SDL2_imageFilter.c  SDL2_imageFilter.h  SDL2_rotozoom.c  SDL2_rotozoom.h  aclocal.m4  config.guess  config.sub  configure  configure.in  ltmain.sh
lib/sdl_gfx/Docs/: html.doxyfile
lib/sdl_gfx/Docs/html/: _r_e_a_d_m_e.html  _r_e_a_d_m_e_source.html  _s_d_l2__framerate_8c.html  _s_d_l2__framerate_8c_source.html  _s_d_l2__framerate_8h.html  _s_d_l2__framerate_8h_source.html  _s_d_l2__gfx_primitives_8c.html  _s_d_l2__gfx_primitives_8c_source.html  _s_d_l2__gfx_primitives_8h.html  _s_d_l2__gfx_primitives_8h_source.html  _s_d_l2__gfx_primitives__font_8h.html  _s_d_l2__gfx_primitives__font_8h_source.html  _s_d_l2__image_filter_8c.html  _s_d_l2__image_filter_8c_source.html  _s_d_l2__image_filter_8h.html  _s_d_l2__image_filter_8h_source.html  _s_d_l2__rotozoom_8c.html  _s_d_l2__rotozoom_8c_source.html  _s_d_l2__rotozoom_8h.html  _s_d_l2__rotozoom_8h_source.html  annotated.html  classes.html  doxygen.css  files.html  functions.html  functions_vars.html  globals.html  globals_0x61.html  globals_0x62.html  globals_0x63.html  globals_0x65.html  globals_0x66.html  globals_0x67.html  globals_0x68.html  globals_0x6c.html  globals_0x6d.html  globals_0x70.html  globals_0x72.html  globals_0x73.html  globals_0x74.html  (+26 more)
lib/sdl_gfx/acinclude/: libtool.m4  ltdl.m4  ltoptions.m4  ltversion.m4  lt~obsolete.m4  pkg.m4  sdl2.m4
lib/sdl_gfx/test/: Makefile.in  README  acinclude.m4  autogen.sh  config.sub  configure  configure.in  testgfx.c  testimagefilter.c  testrotozoom.c
lib/zlib/: gzguts.h
output/: .gitignore
res/: bitty.rc  resource.h
src/: README.md  application.cpp  application.h  archive.cpp  archive.h  archive_txt.cpp  archive_txt.h  archive_zip.cpp  archive_zip.h  asset.cpp  asset.h  audio.cpp  audio.h  bitty.h  bytes.cpp  bytes.h  cloneable.cpp  cloneable.h  code.cpp  code.h  collectible.cpp  collectible.h  color.cpp  color.h  datetime.cpp  datetime.h  dispatchable.cpp  dispatchable.h  document.cpp  document.h  editable.cpp  editable.h  editing.cpp  editing.h  editor.cpp  editor.h  editor_bytes.h  editor_code.cpp  editor_code.h  editor_font.h  (+137 more)
src/mac/: AppDelegate.h  AppDelegate.m  Info.plist
src/mac/Assets.xcassets/AppIcon.appiconset/: Contents.json
src/mac/Base.lproj/: MainMenu.xib
src/resource/: inline_font.h  inline_icon.h  inline_image.h  inline_resource.cpp  inline_resource.h  inline_slice.h  inline_sound.h  inline_toast.h
